# AI_sokoban

./: .gitignore  README.md  ReportGuidelines.txt  pathOptimized.txt
sokoban-solver/: CMakeLists.txt
sokoban-solver/resources/: test_map2.txt  test_map3.txt  test_map4.txt  test_map5.txt
sokoban-solver/src/: main.cpp  sokoban.cpp  sokoban.hpp
src/: DeliverCan.h  MoveStraight.h  MoveStraight.nxc  MoveStraight3.nxc  Print.h  ReadSensors.nxc  SensorRead.h  Smooth_moving.h  Turn.h  Turn180.h  Turn180Left.h  TurnLeft.h  TurnRight.h  main.nxc  mainSafe.nxc  mainmaybeSafe.nxc  read_sensors.h  structs.h
